--- a/package.json
+++ b/package.json
@@ -16,26 +16,29 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
+    "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "framer-motion": "^4.1.17",
     "http-errors": "^1.8.0",
-    "moment": "^2.29.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.2.8",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.7",
-    "parcel": "^2.0.1",
+    "parcel": "^2.8.3",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "styled-components": "^5.3.0"
+    "sharp": "^0.31.3",
+    "styled-components": "^5.3.0",
+    "three": "^0.149.0",
+    "three-addons": "^1.2.0",
+    "three-obj-mtl-loader": "^1.0.3"
   },
   "devDependencies": {
-    "@parcel/packager-raw-url": "^2.0.1",
-    "@parcel/transformer-react-refresh-wrap": "^2.0.1",
-    "@parcel/transformer-webmanifest": "^2.0.1",
     "concurrently": "^6.2.0"
   },
   "resolutions": {}
